# bresson

./: .gitignore  .travis.yml  README.md  bresson-benchmark-against-bson.html  bresson-benchmarks.html  bresson.cabal  index.html  travis.sh
benchmarks/: AgainstBson.hs  Benchmarks.hs
benchmarks/bson-data/: twitter100.bson
docs/: Data-Bson-Binary.html  Data-Bson-Tests-Instances.html  Data-Bson.html  bresson.haddock  doc-index.html  index-frames.html  index.html  mini_Data-Bson-Binary.html  mini_Data-Bson-Tests-Instances.html  mini_Data-Bson.html
docs/bresson/: Data-Bson-Binary.html  bresson.haddock  doc-index.html  index-frames.html  index.html  mini_Data-Bson.html
docs/bresson/src/: Data-Bson-Binary.html  Data-Bson-Class.html  Data-Bson-Instances.html  Data-Bson-Types.html
docs/src/: Data-Bson-Binary.html  Data-Bson-Class.html  Data-Bson-Document.html  Data-Bson-HashDocument.html  Data-Bson-Instances.html  Data-Bson-Parser.html  Data-Bson-Tests-Instances.html  Data-Bson-Types.html  Data-Bson-Utils.html  Data-Bson.html
include/: bson.h
src/Data/: Bson.hs
src/Data/Bson/: Binary.hs  Bson.h  Class.hs  Document.hs  Document.hs-boot  HashDocument.hs  Instances.hs  Parser.hs  Types.hs  Types.hs-boot  Utils.hs
tests/: Tests.hs
tests/Data/Bson/Binary/: Tests.hs
tests/Data/Bson/Instances/: Tests.hs
tests/Data/Bson/Tests/: Instances.hs
tests/Data/Bson/Utils/: Tests.hs
