Name:               bresson
Version:            0.0.0
Synopsis:           BSON parser and encoder
Description:        BSON parser and encoder
License:            MIT
License-file:       LICENSE
Copyright:          Fedor Gogolev <knsd@knsd.net>
Author:             Fedor Gogolev <knsd@knsd.net>
                    Sergei Lebedev <superbobry@gmail.com>
Maintainer:         Fedor Gogolev <knsd@knsd.net>
Homepage:           https://github.com/lambda-llama/bresson
Bug-reports:        https://github.com/lambda-llama/bresson/issues
Category:           Data
Stability:          Alpha
Build-type:         Simple
Cabal-version:      >= 1.12
Tested-with:        GHC == 7.6.*
Extra-Source-Files: include/*.h

Flag devtools
    Description: Compile with devtools, that means with benchmark against bson and bsongen utility
    Default:     False

Library
    Hs-source-dirs:   src, tests
    Include-dirs:     include
    Ghc-options:      -Wall -fno-warn-orphans
    Default-language: Haskell2010
    Build-depends:
        base                       == 4.6.*  || == 4.5.*
      , bytestring                 == 0.10.* || == 0.9.*
      , time                       == 1.4.*
      , deepseq                    == 1.3.*
      , binary                     == 0.5.*
      , data-binary-ieee754        == 0.4.*
      , word24                     == 1.0.*
      , text                       == 0.11.*
      , text-format                == 0.3.*
      , vector                     == 0.10.*
      , unordered-containers       == 0.2.*
      , bitset                     == 1.4.*
      , uuid                       == 1.2.*

    Exposed-modules:
        Data.Bson
        Data.Bson.Binary

    if flag(devtools)
        Exposed-modules: Data.Bson.Tests.Instances
        Build-depends:   QuickCheck == 2.*

    Other-modules:
        Data.Bson.Class
        Data.Bson.Instances
        Data.Bson.Types
        Data.Bson.Utils

Executable bsongen
    Main-is:          BsonGen.hs
    Hs-source-dirs:   bin, tests
    Ghc-options:      -Wall -fno-warn-orphans
    Default-language: Haskell2010
    if !flag(devtools)
        Buildable: False

    Build-depends:
        base                       == 4.6.*  || == 4.5.*
      , bytestring                 == 0.10.* || == 0.9.*
      , time                       == 1.4.*
      , binary                     == 0.5.*
      , word24                     == 1.0.*
      , text                       == 0.11.*
      , vector                     == 0.10.*
      , unordered-containers       == 0.2.*
      , bitset                     == 1.4.*
      , uuid                       == 1.2.*
      , bresson

      , QuickCheck                 == 2.*
      , directory                  == 1.2.*
      , filepath                   == 1.3.*
      , random                     == 1.0.*
      , optparse-applicative       == 0.5.*

Test-suite bresson-tests
    Main-is:          Tests.hs
    Hs-source-dirs:   tests
    Default-language: Haskell2010
    Type:             exitcode-stdio-1.0

    Build-depends:
        base                 == 4.6.*  || == 4.5.*
      , bytestring           == 0.10.* || == 0.9.*
      , time                 == 1.4.*
      , binary               == 0.5.*
      , word24               == 1.0.*
      , text                 == 0.11.*
      , vector               == 0.10.*
      , unordered-containers == 0.2.*
      , bitset               == 1.4.*
      , uuid                 == 1.2.*
      , bresson

      , tasty                == 0.1.*
      , tasty-quickcheck     == 0.1
      , QuickCheck           == 2.*

Benchmark bresson-benchmarks
    Main-is: Benchmarks.hs
    Hs-source-dirs:   tests, benchmarks
    Ghc-options:      -Wall -fno-warn-orphans
    Default-language: Haskell2010
    Type:             exitcode-stdio-1.0

    Build-depends:
        base                       == 4.6.*  || == 4.5.*
      , bytestring                 == 0.10.* || == 0.9.*
      , time                       == 1.4.*
      , deepseq                    == 1.3.*
      , binary                     == 0.5.*
      , word24                     == 1.0.*
      , text                       == 0.11.*
      , vector                     == 0.10.*
      , unordered-containers       == 0.2.*
      , bitset                     == 1.4.*
      , uuid                       == 1.2.*
      , bresson

      , criterion                  == 0.6.*
      , QuickCheck                 == 2.5.*
      , random                     == 1.0.*

Benchmark bresson-benchmark-against-bson
    Main-is: AgainstBson.hs
    Hs-source-dirs:   tests, benchmarks
    Ghc-options:      -Wall -fno-warn-orphans
    Default-language: Haskell2010
    Type:             exitcode-stdio-1.0
    if !flag(devtools)
        Buildable: False

    Build-depends:
        base                       == 4.6.*  || == 4.5.*
      , bytestring                 == 0.10.* || == 0.9.*
      , time                       == 1.4.*
      , deepseq                    == 1.3.*
      , binary                     == 0.5.*
      , word24                     == 1.0.*
      , text                       == 0.11.*
      , vector                     == 0.10.*
      , unordered-containers       == 0.2.*
      , bitset                     == 1.4.*
      , uuid                       == 1.2.*
      , bresson

      , criterion                  == 0.6.*
      , bson                       == 0.2.2
      , deepseq-th                 == 0.1.*

Source-repository head
    Type:             git
    Location:         https://github.com/lambda-llama/bresson
